foods list button added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- a div contain of two buttons with some style -->
 <div class="buttons">
     <a href="#" id="random">غذای رندوم</a>
-    <a href="foods.html">لیست غذاها</a>
+    <a href="#" id="list">لیست غذاها</a>
 </div>
 
 <main id="main"></main>
